# MathPaperStruct

./: .env.example  .gitignore  LICENSE  README.ja.md  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  run_mathpaperstruct_gui.command
data/sample/: paper_001.md
data/stress/: README.md
db/: 001_initial_schema.sql  002_duplicate_review_queue.sql  003_question_canonicalization.sql  004_asset_canonicalization.sql
docs/: evaluation-report-2026-05-17.md  prd-mineru-deepseek-question-bank.md
tests/: test_api_app.py  test_asset_canonicalize.py  test_asset_identity.py  test_asset_visual_dedup.py  test_batch_ingest.py  test_batch_real_ingest.py  test_canonicalize.py  test_cli.py  test_config.py  test_deepseek.py  test_deepseek_hardening.py  test_duplicate_review.py  test_eval_asset_linkage.py  test_eval_deepseek_structure.py  test_eval_real_e2e_beta.py  test_gui_export.py  test_image_phash.py  test_ingestion.py  test_layout_ownership.py  test_local_asset_store.py  test_mineru.py  test_mineru_retry.py  test_paper_builder.py  test_paper_orchestrator.py  test_pdf_cropper.py  test_pipeline.py  test_quality.py  test_question_identity.py  test_question_splitter.py  test_repository.py  test_schema_files.py  test_shadow_comparator.py  test_storage.py  test_structure_quality_gating.py  test_type_inference.py
tools/: batch_duplicate_review.py  batch_extract.py  batch_ingest_full.py  batch_real_ingest.py  batch_shadow.py  eval_asset_linkage.py  eval_deepseek_structure.py  eval_real_e2e_beta.py  generate_synthetic_stress.py  pdf_to_mineru.py
(+103 files in other folders)
