[project]
name = "question-bank-pipeline"
version = "0.1.0"
description = "MinerU + DeepSeek pipeline for structured math question bank production."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "minio>=7.2.0",
  "python-multipart>=0.0.9",
]

[project.scripts]
question-bank = "question_bank.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
